testsuite/tests/indexed-types/should_compile/T22717_fam_orph_a.hs
{-# LANGUAGE TypeFamilies #-}
module T22717_fam_orph_a where

type family F a
