testsuite/tests/indexed-types/should_fail/ClosedFam4.hs
{-# LANGUAGE TypeFamilies #-}

module ClosedFam4 where

type family Foo a where ..